--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"typescript": "^5.1.3"
 	},
 	"dependencies": {
+		"@octokit/app": "^13.1.8",
 		"express": "^4.18.2",
 		"tslib": "^2.5.3",
 		"zod": "^3.21.4"
