--- a/package.json
+++ b/package.json
@@ -14,14 +14,18 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/adm-zip": "^0.5.0",
 		"@types/express": "^4.17.17",
 		"rimraf": "^5.0.1",
 		"typescript": "^5.1.3"
 	},
 	"dependencies": {
 		"@octokit/app": "^13.1.8",
+		"adm-zip": "^0.5.10",
+		"deta": "^1.1.0",
 		"express": "^4.18.2",
 		"tslib": "^2.5.3",
+		"undici": "^5.22.1",
 		"zod": "^3.21.4"
 	}
 }
