--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,7 @@
 		"allowJs": true,
 		"checkJs": true,
 		"strictPropertyInitialization": true,
-		"newLine": "lf",
-		"importHelpers": true
+		"newLine": "lf"
 	},
 	"buildOptions": {
 	},
