--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"devDependencies": {
 		"@types/adm-zip": "^0.5.0",
 		"@types/express": "^4.17.17",
+		"@types/semver": "^7.5.0",
 		"rimraf": "^5.0.1",
 		"typescript": "^5.1.3"
 	},
@@ -24,6 +25,7 @@
 		"adm-zip": "^0.5.10",
 		"deta": "^1.1.0",
 		"express": "^4.18.2",
+		"semver": "^7.5.3",
 		"undici": "^5.22.1",
 		"zod": "^3.21.4"
 	}
