--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/adm-zip": "^0.5.0",
+		"@types/cors": "^2.8.13",
 		"@types/express": "^4.17.17",
 		"@types/semver": "^7.5.0",
 		"rimraf": "^5.0.1",
@@ -23,6 +24,7 @@
 	"dependencies": {
 		"@octokit/app": "^13.1.8",
 		"adm-zip": "^0.5.10",
+		"cors": "^2.8.5",
 		"deta": "^1.1.0",
 		"express": "^4.18.2",
 		"semver": "^7.5.3",
