--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"cors": "^2.8.5",
 		"deta": "^1.1.0",
 		"express": "^4.18.2",
+		"express-rate-limit": "^6.7.0",
 		"semver": "^7.5.3",
 		"undici": "^5.22.1",
 		"zod": "^3.21.4"
