--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,8 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Deploy
-      uses: lizheming/deta-action@master
+      uses: neobrains/space-deployment-github-action@v0.5
       with:
         access_token: ${{ secrets.SPACE_ACCESS_TOKEN }}
-        id: ${{ secrets.SPACE_ID }}
+        project_id: ${{ secrets.SPACE_ID }}
+        space_push: true
