--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"fixcrlf": "find . -type f -print0 | xargs -0 dos2unix",
 		"cleanbuild": "rimraf ./dist && tsc",
 		"buildwatch": "rimraf ./dist && tsc -w",
-		"build": "tsc"
+		"build": "tsc",
+		"vercel": "vercel"
 	},
 	"keywords": [],
 	"author": "",
@@ -19,7 +20,8 @@
 		"@types/express": "^4.17.17",
 		"@types/semver": "^7.5.0",
 		"rimraf": "^5.0.1",
-		"typescript": "^5.1.3"
+		"typescript": "^5.1.3",
+		"vercel": "^31.0.1"
 	},
 	"dependencies": {
 		"@octokit/app": "^13.1.8",
